--- a/working.ipynb
+++ b/working.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 1,
    "id": "9e391516",
    "metadata": {
     "scrolled": false
@@ -14,7 +14,7 @@
        "draw_hg (generic function with 1 method)"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 2,
    "id": "6693fcf1",
    "metadata": {},
    "outputs": [],
@@ -35,23 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 4,
    "id": "43c0de7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PyObject <spacy.lang.en.English object at 0x7f974ebffc90>"
+       "PyObject <spacy.lang.en.English object at 0x7f44da39d0d0>"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "BSON.@load \"models/model_rf.bson\" rf\n",
+    "BSON.@load \"models/model_rf.bson\" rf uniques\n",
     "\n",
     "spacy = pyimport(\"spacy\")\n",
     "\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 5,
    "id": "3def5494",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 6,
    "id": "1c46d4e6",
    "metadata": {},
    "outputs": [
@@ -388,57 +388,7 @@
        " \"Dollar Climbs to 2021 Highs; U.S. CPI Points to Early Fed Hikes\"\n",
        " \"Aussie dips below 73 on soft jobs report\"\n",
        " \"Dollar Up, Boosted by Highest U.S. Inflation in a Generation\"\n",
-       " \"GBPUSD Price Penetrates \\$1.34 Level, Targeting Support Level of \\$1.32\"\n",
-       " \"E-commerce giant JD starts accepting China's digital currency on Singles Day for the first time\"\n",
-       " \"Dollar climbs as U.S. inflation surge fuels rate hike speculation\"\n",
-       " \"EUR/USD – A major break lower\"\n",
-       " \"Nordea sees EUR/USD dropping to 1.08 by the end of next year\"\n",
-       " \"New Zealand dollar dips to 71\"\n",
-       " \"Column: Hedge funds' FX plays get crushed in red October\"\n",
-       " \"Dollar Pushes Higher; U.S. CPI Release in Focus\"\n",
-       " \"Aussie extends losses on China concerns\"\n",
-       " \"Dollar Up, at One-Month Low Against Yen as Investors Await U.S. Inflation Data\"\n",
-       " \"USDJPY Price Penetrates Support Level of \\$113 Downside, Bearish Trend May Commence\"\n",
-       " \"Dollar dips before U.S. inflation data\"\n",
-       " \"Pound US Dollar Exchange Rate Struggles ahead of US Inflation\"\n",
-       " \"Business confidence shines but Aussie slips\"\n",
-       " \"Dollar Edges Lower; PPI Data in Focus\"\n",
-       " \"Dollar Down, Inflation Data Looms as Next Test on Central Bank Interest Rate Hikes\"\n",
-       " \"USDCHF Price: Support Level of \\$0.909 Holds, Bullish Movement May Commence\"\n",
-       " \"Dollar slips from 15-month highs with Fed, inflation in focus\"\n",
-       " \"Pound to Put Squeeze on Bears as BoE Unlikely to Sit on Rate-Hike Fence\"\n",
-       " \"China Reached A Milestone Of 140M Digital Yuan Wallets – PBoC Official\"\n",
-       " \"Aussie climbs up ahead of confidence data\"\n",
-       " \"Column: Hedge funds get smoked on sterling by BoE sizzler\"\n",
-       " \"Dollar dips but shows biggest weekly gain in almost 3 months\"\n",
-       " \"EURJPY Price Penetrates \\$131 Level Downside, Targeting \\$130 Level\"\n",
-       " \"Column: Far from debasement, dollar hits overdrive\"\n",
        " ⋮\n",
-       " \"Australian Dollar Faces Rising Obstacles to Sustain Its Rally\"\n",
-       " \"In a Biden Victory, Dollar Likely Comes Out on Top, BofA Says\"\n",
-       " \"Forex - Dollar Hits 22-Month Low Amid Recovery Concerns\"\n",
-       " \"Dollar Is Losing Its Luster as Investors Line Up to Go Short\"\n",
-       " \"Dollar Continues Slide Over Dimming U.S. Economic Recovery Prospects\"\n",
-       " \"Yen up and dollar clinging on as China's Houston response awaited\"\n",
-       " \"Hedging Costs at Decade Low Lure India Firms Back to Dollar Debt\"\n",
-       " \"Bubble Warnings Get Louder With Nasdaq Erasing Huge Monday Rally\"\n",
-       " \"Dollar Hovers Around 22-Month Low as Experts See Holes in Economic Recovery\"\n",
-       " \"Euro’s Strength May Just Be Prelude to a Big Trend in the Making\"\n",
-       " \"Turkey Asks Banks to Hedge Currency Risk in Move to Buoy Lira\"\n",
-       " \"Bullish bets on most Asian currencies climb on vaccine hopes, China stability: Reuters poll\"\n",
-       " \"Forex - Dollar Weakens as German Confidence Boosts Risk Appetite\"\n",
-       " \"Dollar Down Despite Rising U.S.-China Tensions\"\n",
-       " \"UN Calls for Basic Income to Curb Virus Spread in Poor Nations\"\n",
-       " \"Thailand has not intervened in baht for trade advantage: central bank\"\n",
-       " \"Dollar finds footing as Sino-U.S. tensions escalate\"\n",
-       " \"Battered U.S. dollar 'hanging by a thread' as coronavirus cases grow\"\n",
-       " \"Battered U.S. dollar 'hanging by a thread' as coronavirus cases grow\"\n",
-       " \"EUR/USD to \\$1.21 by Year End as Covid Crisis, Stimulus Worries to Hurt Dollar\"\n",
-       " \"Euro Climbs to Highest in Almost Two Years on EU Deal Enthusiasm\"\n",
-       " \"UBS Warns U.S. Will Soon Label Swiss a Currency Manipulator\"\n",
-       " \"Forex - Dollar Edges Higher, But Trend Points South\"\n",
-       " \"Dollar Down, With U.S. Bickering Over Further Stimulus Measures\"\n",
-       " \"Dollar licks wounds as investors fret over U.S. stimulus\"\n",
        " \"Threat to Dollar’s Global Supremacy Revived by EU Stimulus Deal\"\n",
        " \"Euro Rises to Nearly 19-Month High on Historical EU Fiscal Package\"\n",
        " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
@@ -453,7 +403,7 @@
        " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
       ]
      },
-     "execution_count": 339,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 7,
    "id": "fcaea3b2",
    "metadata": {},
    "outputs": [
@@ -474,7 +424,7 @@
        "Any[]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 8,
    "id": "5b598969",
    "metadata": {},
    "outputs": [
@@ -495,7 +445,7 @@
        "clean_article (generic function with 1 method)"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 9,
    "id": "8b232ca3",
    "metadata": {},
    "outputs": [],
@@ -530,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 10,
    "id": "72c11aca",
    "metadata": {},
    "outputs": [
@@ -551,57 +501,7 @@
        " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
        " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
        " \"Dollar Climbs to 2021 Highs\"\n",
-       " \"US CPI Points to Early Fed Hikes\"\n",
-       " \"Aussie dips below 73 on soft jobs report\"\n",
-       " \"Dollar Up, Boosted by Highest US Inflation in a Generation\"\n",
-       " \"GBPUSD Price Penetrates \\$1.34 Level, Targeting Support Level of \\$1.32\"\n",
-       " \"E-commerce giant JD starts accepting China's digital currency on Singles Day for the first time\"\n",
-       " \"Dollar climbs as US inflation surge fuels rate hike speculation\"\n",
-       " \"EUR/USD – A major break lower\"\n",
-       " \"Nordea sees EUR/USD dropping to 1.08 by the end of next year\"\n",
-       " \"New Zealand dollar dips to 71\"\n",
-       " \"Hedge funds' FX plays get crushed in red October\"\n",
-       " \"Dollar Pushes Higher\"\n",
-       " \"US CPI Release in Focus\"\n",
-       " \"Aussie extends losses on China concerns\"\n",
-       " \"Dollar Up, at One-Month Low Against Yen as Investors Await US Inflation Data\"\n",
-       " \"USDJPY Price Penetrates Support Level of \\$113 Downside, Bearish Trend May Commence\"\n",
-       " \"Dollar dips before US inflation data\"\n",
-       " \"Pound US Dollar Exchange Rate Struggles ahead of US Inflation\"\n",
-       " \"Business confidence shines but Aussie slips\"\n",
-       " \"Dollar Edges Lower\"\n",
-       " \"PPI Data in Focus\"\n",
-       " \"Dollar Down, Inflation Data Looms as Next Test on Central Bank Interest Rate Hikes\"\n",
-       " \"USDCHF Price: Support Level of \\$0.909 Holds, Bullish Movement May Commence\"\n",
-       " \"Dollar slips from 15-month highs with Fed, inflation in focus\"\n",
-       " \"Pound to Put Squeeze on Bears as BoE Unlikely to Sit on Rate-Hike Fence\"\n",
-       " \"China Reached A Milestone Of 140M Digital Yuan Wallets – PBoC Official\"\n",
        " ⋮\n",
-       " \"Dollar Hits 22-Month Low Amid Recovery Concerns\"\n",
-       " \"Dollar Is Losing Its Luster as Investors Line Up to Go Short\"\n",
-       " \"Dollar Continues Slide Over Dimming US Economic Recovery Prospects\"\n",
-       " \"Yen up and dollar clinging on as China's Houston response awaited\"\n",
-       " \"Hedging Costs at Decade Low Lure India Firms Back to Dollar Debt\"\n",
-       " \"Bubble Warnings Get Louder With Nasdaq Erasing Huge Monday Rally\"\n",
-       " \"Dollar Hovers Around 22-Month Low as Experts See Holes in Economic Recovery\"\n",
-       " \"Euro’s Strength May Just Be Prelude to a Big Trend in the Making\"\n",
-       " \"Turkey Asks Banks to Hedge Currency Risk in Move to Buoy Lira\"\n",
-       " \"Bullish bets on most Asian currencies climb on vaccine hopes, China stability: Reuters poll\"\n",
-       " \"Dollar Weakens as German Confidence Boosts Risk Appetite\"\n",
-       " \"Dollar Down Despite Rising US-China Tensions\"\n",
-       " \"UN Calls for Basic Income to Curb Virus Spread in Poor Nations\"\n",
-       " \"Thailand has not intervened in baht for trade advantage: central bank\"\n",
-       " \"Dollar finds footing as Sino-US tensions escalate\"\n",
-       " \"Battered US dollar 'hanging by a thread' as coronavirus cases grow\"\n",
-       " \"Battered US dollar 'hanging by a thread' as coronavirus cases grow\"\n",
-       " \"EUR/USD to \\$1.21 by Year End as Covid Crisis, Stimulus Worries to Hurt Dollar\"\n",
-       " \"Euro Climbs to Highest in Almost Two Years on EU Deal Enthusiasm\"\n",
-       " \"UBS Warns US Will Soon Label Swiss a Currency Manipulator\"\n",
-       " \"Dollar Edges Higher, But Trend Points South\"\n",
-       " \"Dollar Down, With US Bickering Over Further Stimulus Measures\"\n",
-       " \"Dollar licks wounds as investors fret over US stimulus\"\n",
-       " \"Threat to Dollar’s Global Supremacy Revived by EU Stimulus Deal\"\n",
-       " \"Euro Rises to Nearly 19-Month High on Historical EU Fiscal Package\"\n",
        " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
        " \"Dollar Drops\"\n",
        " \"Euro, Sterling Gain on Summit Agreement\"\n",
@@ -616,7 +516,7 @@
        " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
       ]
      },
-     "execution_count": 343,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 11,
    "id": "762d1bc0",
    "metadata": {},
    "outputs": [
@@ -648,57 +548,7 @@
        " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
        " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
        " \"Dollar Climbs to 2021 Highs\"\n",
-       " \"US CPI Points to Early Fed Hikes\"\n",
-       " \"Aussie dips below 73 on soft jobs report\"\n",
-       " \"Dollar Up, Boosted by Highest US Inflation in a Generation\"\n",
-       " \"GBPUSD Price Penetrates \\$1.34 Level, Targeting Support Level of \\$1.32\"\n",
-       " \"E-commerce giant JD starts accepting China's digital currency on Singles Day for the first time\"\n",
-       " \"Dollar climbs as US inflation surge fuels rate hike speculation\"\n",
-       " \"EUR/USD – A major break lower\"\n",
-       " \"Nordea sees EUR/USD dropping to 1.08 by the end of next year\"\n",
-       " \"New Zealand dollar dips to 71\"\n",
-       " \"Hedge funds' FX plays get crushed in red October\"\n",
-       " \"Dollar Pushes Higher\"\n",
-       " \"US CPI Release in Focus\"\n",
-       " \"Aussie extends losses on China concerns\"\n",
-       " \"Dollar Up, at One-Month Low Against Yen as Investors Await US Inflation Data\"\n",
-       " \"USDJPY Price Penetrates Support Level of \\$113 Downside, Bearish Trend May Commence\"\n",
-       " \"Dollar dips before US inflation data\"\n",
-       " \"Pound US Dollar Exchange Rate Struggles ahead of US Inflation\"\n",
-       " \"Business confidence shines but Aussie slips\"\n",
-       " \"PPI Data in Focus\"\n",
-       " \"Dollar Down, Inflation Data Looms as Next Test on Central Bank Interest Rate Hikes\"\n",
-       " \"USDCHF Price: Support Level of \\$0.909 Holds, Bullish Movement May Commence\"\n",
-       " \"Dollar slips from 15-month highs with Fed, inflation in focus\"\n",
-       " \"Pound to Put Squeeze on Bears as BoE Unlikely to Sit on Rate-Hike Fence\"\n",
-       " \"China Reached A Milestone Of 140M Digital Yuan Wallets – PBoC Official\"\n",
-       " \"Aussie climbs up ahead of confidence data\"\n",
        " ⋮\n",
-       " \"In a Biden Victory, Dollar Likely Comes Out on Top, BofA Says\"\n",
-       " \"Dollar Hits 22-Month Low Amid Recovery Concerns\"\n",
-       " \"Dollar Is Losing Its Luster as Investors Line Up to Go Short\"\n",
-       " \"Dollar Continues Slide Over Dimming US Economic Recovery Prospects\"\n",
-       " \"Yen up and dollar clinging on as China's Houston response awaited\"\n",
-       " \"Hedging Costs at Decade Low Lure India Firms Back to Dollar Debt\"\n",
-       " \"Bubble Warnings Get Louder With Nasdaq Erasing Huge Monday Rally\"\n",
-       " \"Dollar Hovers Around 22-Month Low as Experts See Holes in Economic Recovery\"\n",
-       " \"Euro’s Strength May Just Be Prelude to a Big Trend in the Making\"\n",
-       " \"Turkey Asks Banks to Hedge Currency Risk in Move to Buoy Lira\"\n",
-       " \"Bullish bets on most Asian currencies climb on vaccine hopes, China stability: Reuters poll\"\n",
-       " \"Dollar Weakens as German Confidence Boosts Risk Appetite\"\n",
-       " \"Dollar Down Despite Rising US-China Tensions\"\n",
-       " \"UN Calls for Basic Income to Curb Virus Spread in Poor Nations\"\n",
-       " \"Thailand has not intervened in baht for trade advantage: central bank\"\n",
-       " \"Dollar finds footing as Sino-US tensions escalate\"\n",
-       " \"Battered US dollar 'hanging by a thread' as coronavirus cases grow\"\n",
-       " \"EUR/USD to \\$1.21 by Year End as Covid Crisis, Stimulus Worries to Hurt Dollar\"\n",
-       " \"Euro Climbs to Highest in Almost Two Years on EU Deal Enthusiasm\"\n",
-       " \"UBS Warns US Will Soon Label Swiss a Currency Manipulator\"\n",
-       " \"Dollar Edges Higher, But Trend Points South\"\n",
-       " \"Dollar Down, With US Bickering Over Further Stimulus Measures\"\n",
-       " \"Dollar licks wounds as investors fret over US stimulus\"\n",
-       " \"Threat to Dollar’s Global Supremacy Revived by EU Stimulus Deal\"\n",
-       " \"Euro Rises to Nearly 19-Month High on Historical EU Fiscal Package\"\n",
        " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
        " \"Dollar Drops\"\n",
        " \"Euro, Sterling Gain on Summit Agreement\"\n",
@@ -713,7 +563,7 @@
        " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
       ]
      },
-     "execution_count": 344,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 12,
    "id": "fdda2040",
    "metadata": {},
    "outputs": [],
@@ -2779,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "95b363df",
+   "id": "e7fae089",
    "metadata": {},
    "outputs": [
     {
