--- a/scraping_articles.ipynb
+++ b/scraping_articles.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "c97c9a36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Gumbo [708ec375-b3d6-5a57-a7ce-8257bf98657a]\n",
+      "└ @ Base loading.jl:1317\n"
+     ]
+    }
+   ],
    "source": [
     "using HTTP, Gumbo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "2ea5d728",
    "metadata": {},
    "outputs": [],
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "c22e4a9f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "2c8b82c9",
    "metadata": {},
    "outputs": [],
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "2a239285",
    "metadata": {},
    "outputs": [
@@ -52,7 +61,7 @@
        "Any[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "0719fc82",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for article in body[7][4][6].children\n",
+    "for article in body[9][4][6].children\n",
     "    text = article[2][1][1].text\n",
     "    if !occursin(\".initSlot\", text)\n",
     "        append!(articles, [text])\n",
@@ -80,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "6b4c39b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3000-element Vector{Nothing}:\n",
+       "50-element Vector{Nothing}:\n",
        " nothing\n",
        " nothing\n",
        " nothing\n",
@@ -116,23 +125,70 @@
        " nothing"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "asyncmap(1:3000;ntasks=50) do n\n",
+    "asyncmap(1:50;ntasks=10) do n\n",
     "    r = HTTP.get(\"https://www.investing.com/news/forex-news/$n\", readtimeout=10)\n",
     "    r_parsed = parsehtml(String(r.body))\n",
     "    body = r_parsed.root[2]\n",
-    "    for article in body[7][4][6].children\n",
+    "    for article in body[9][4][6].children\n",
     "        text = article[2][1][1].text\n",
     "        if !occursin(\".initSlot\", text)\n",
     "            append!(articles, [text])\n",
     "        end\n",
     "    end\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f6c7166f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "903-element Vector{Any}:\n",
+       " \"Dollar slips, euro gains as market awaits U.S. CPI data\"\n",
+       " \"USDCHF lower but pair remains stuck in the mud\"\n",
+       " \"Aussie rises as risk appetite rises\"\n",
+       " \"GBPUSD working on its 3rd day higher but the going is relatively slow\"\n",
+       " \"EURUSD remains relatively contained although higher on the day\"\n",
+       " \"Dollar Edges Lower; Tight Range Ahead of Inflaton Data\"\n",
+       " \"Kazakh state sells \\$1.3 billion worth of foreign currency in domestic market in Jan\"\n",
+       " \"AUD/USD nudges to two-week high as dollar slips on the day\"\n",
+       " \"Dollar Down as Investors Await U.S. Inflation Data\"\n",
+       " \"ForexLive Asia FX news wrap: EUR/USD slides a few points\"\n",
+       " \"Canadian dollar weakens as oil rally loses momentum\"\n",
+       " \"Dollar, euro trade sideways after ECB pushback\"\n",
+       " \"Lending data from China is due soon - record new yuan loans expected\"\n",
+       " ⋮\n",
+       " \"Dollar advances as Fed minutes open door to future taper talks\"\n",
+       " \"Dollar Steadies Near Multi-Month Lows; Fed Minutes Loom\"\n",
+       " \"GBP/USD Hits 3-Month High but Return of Brexit Boogeyman Will Cap Gains\"\n",
+       " \"Dollar slides to 2-1/2 month low as Fed rate hike fears subside\"\n",
+       " \"Canadian exporters rejig currency hedges as commodities boom\"\n",
+       " \"Dollar Weakens as Fed Officials Point to Lower for Longer\"\n",
+       " \"Dollar Down as Investors Bet on U.S. Interest Rates Staying Lower for Longer\"\n",
+       " \"Gold Up, Reaches Three-and-a-Half Month High Over Weaker Dollar, Inflation Worries\"\n",
+       " \"Dollar inches lower as Treasury yields hold firm\"\n",
+       " \"Hungary Takes Pole Position for EU’s First Rate Hike of 2021\"\n",
+       " \"Dollar Edges Higher; Covid Cases Rise in Asia\"\n",
+       " \"Dollar Up Over Asian COVID-19 Outbreak Worries, But Investors Prepping for Fall\""
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles"
    ]
   },
   {
@@ -157,60 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a0851c33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "51053-element Vector{Any}:\n",
-       " \"Dollar rises as COVID concerns spark flight to safety\"\n",
-       " \"Exclusive - China FX regulatory body proposes cap on banks' prop trading\"\n",
-       " \"Higher core yields, sticky inflation see JPMorgan turn cautious on emerging EMEA FX\"\n",
-       " \"U.K. Budget Deficit Exceeds Forecasts as Debt Costs Triple\"\n",
-       " \"Dollar Edges Higher; Turkish Lira Continues Descent\"\n",
-       " \"Dollar Up, Gains From Euro’s Fall as Focus Remains on Interest Rate Hike Timelines\"\n",
-       " \"EURJPY Price: Will There Be a Continuation of Bearish Trend?\"\n",
-       " \"Dollar takes a breather, edges back from 16-month peak\"\n",
-       " \"Retail Sales Puts the Pound and the Loonie in the Spotlight\"\n",
-       " \"EUR/GBP – Could we finally see a breakout?\"\n",
-       " \"Turkish Lira Falls to Record After Central Bank Cuts Rates Again\"\n",
-       " \"Dollar Retreats From 16-Month High; Lira Slumps Ahead of Meeting\"\n",
-       " \"Pound Japanese Yen (GBP/JPY) Exchange Rate to Reverse Losses on Disappointing JP Inflation?\"\n",
-       " ⋮\n",
-       " \"Forex - Dollar down vs. most rivals ahead of key U.S. data\"\n",
-       " \"Forex - GBP/USD hits fresh daily high after upbeat U.K. PMI data\"\n",
-       " \"Forex - EUR/USD extends early gains, surges to 7-month high\"\n",
-       " \"FACTBOX-How to invest in gold and key price drivers=2\"\n",
-       " \"FOREX-Euro jumps vs dollar, yen trims post-BOJ loss\"\n",
-       " \"WRAPUP 3-Currency tensions flare as Brazil, Japan take action\"\n",
-       " \"UPDATE 2-Russia central bank cancels IIB's banking licence\"\n",
-       " \"WRAPUP 1-EU urges faster yuan rise; China demurs\"\n",
-       " \"FOREX-Euro jumps vs weak dollar; yen trims falls\"\n",
-       " \"GLOBAL MARKETS-Yen falls on BOJ surprise; stocks and gold rise\"\n",
-       " \"ANALYSIS-Spending cuts may harm UK's global influence\"\n",
-       " \"UPDATE 1-France wants China involved in currency discussions\""
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "6dfc46f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "using BSON\n",
-    "BSON.@save \"articles_long.bson\" articles"
+    "BSON.@save \"articles_short.bson\" articles"
    ]
   }
  ],
