--- a/working.ipynb
+++ b/working.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6693fcf1",
    "metadata": {},
    "outputs": [],
@@ -357,53 +357,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3def5494",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BSON.@load \"articles.bson\" articles"
+    "BSON.@load \"articles_short.bson\" articles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1c46d4e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1753-element Vector{Any}:\n",
-       " \"Dollar dips but shows biggest weekly gain in almost 3 months\"\n",
-       " \"EURJPY Price Penetrates \\$131 Level Downside, Targeting \\$130 Level\"\n",
-       " \"Column: Far from debasement, dollar hits overdrive\"\n",
-       " \"Dollar Edges Lower; Remains Near 16-Month High\"\n",
-       " \"NZ dollar drops below 70 level\"\n",
-       " \"Dollar Near 16-Month High on Rates Hike Bets\"\n",
-       " \"Dollar climbs after hot U.S. inflation; euro dips\"\n",
-       " \"U.S. Dollar Continues to Gain Following Wednesday's Inflation Data \"\n",
-       " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
-       " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
-       " \"Dollar Climbs to 2021 Highs; U.S. CPI Points to Early Fed Hikes\"\n",
-       " \"Aussie dips below 73 on soft jobs report\"\n",
-       " \"Dollar Up, Boosted by Highest U.S. Inflation in a Generation\"\n",
+       "903-element Vector{Any}:\n",
+       " \"Dollar slips, euro gains as market awaits U.S. CPI data\"\n",
+       " \"USDCHF lower but pair remains stuck in the mud\"\n",
+       " \"Aussie rises as risk appetite rises\"\n",
+       " \"GBPUSD working on its 3rd day higher but the going is relatively slow\"\n",
+       " \"EURUSD remains relatively contained although higher on the day\"\n",
+       " \"Dollar Edges Lower; Tight Range Ahead of Inflaton Data\"\n",
+       " \"Kazakh state sells \\$1.3 billion worth of foreign currency in domestic market in Jan\"\n",
+       " \"AUD/USD nudges to two-week high as dollar slips on the day\"\n",
+       " \"Dollar Down as Investors Await U.S. Inflation Data\"\n",
+       " \"ForexLive Asia FX news wrap: EUR/USD slides a few points\"\n",
+       " \"Canadian dollar weakens as oil rally loses momentum\"\n",
+       " \"Dollar, euro trade sideways after ECB pushback\"\n",
+       " \"Lending data from China is due soon - record new yuan loans expected\"\n",
        " ⋮\n",
-       " \"Threat to Dollar’s Global Supremacy Revived by EU Stimulus Deal\"\n",
-       " \"Euro Rises to Nearly 19-Month High on Historical EU Fiscal Package\"\n",
-       " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
-       " \"Forex - Dollar Drops; Euro, Sterling Gain on Summit Agreement\"\n",
-       " \"Negative Rates Lose Out to Zero Cost of Money in Opening Wallets\"\n",
-       " \"EU progress and vaccine hopes keep pressure on dollar\"\n",
-       " \"Dollar Retreats Over Renewed Hopes for COVID-19 Vaccine\"\n",
-       " \"Forex - Euro Climbs on EU Recovery Fund Optimism\"\n",
-       " \"Euro jumps to four-month peak on hints of progress in debt talks\"\n",
-       " \"Dollar Up, With Investors Anticipating Fresh U.S. Stimulus Measures\"\n",
-       " \"Iran's rial hits new low on unofficial market; virus, sanctions weigh\"\n",
-       " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
+       " \"Dollar advances as Fed minutes open door to future taper talks\"\n",
+       " \"Dollar Steadies Near Multi-Month Lows; Fed Minutes Loom\"\n",
+       " \"GBP/USD Hits 3-Month High but Return of Brexit Boogeyman Will Cap Gains\"\n",
+       " \"Dollar slides to 2-1/2 month low as Fed rate hike fears subside\"\n",
+       " \"Canadian exporters rejig currency hedges as commodities boom\"\n",
+       " \"Dollar Weakens as Fed Officials Point to Lower for Longer\"\n",
+       " \"Dollar Down as Investors Bet on U.S. Interest Rates Staying Lower for Longer\"\n",
+       " \"Gold Up, Reaches Three-and-a-Half Month High Over Weaker Dollar, Inflation Worries\"\n",
+       " \"Dollar inches lower as Treasury yields hold firm\"\n",
+       " \"Hungary Takes Pole Position for EU’s First Rate Hike of 2021\"\n",
+       " \"Dollar Edges Higher; Covid Cases Rise in Asia\"\n",
+       " \"Dollar Up Over Asian COVID-19 Outbreak Worries, But Investors Prepping for Fall\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fcaea3b2",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "Any[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "5b598969",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "clean_article (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8b232ca3",
    "metadata": {},
    "outputs": [],
@@ -480,43 +480,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "72c11aca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2026-element Vector{Any}:\n",
-       " \"Dollar dips but shows biggest weekly gain in almost 3 months\"\n",
-       " \"EURJPY Price Penetrates \\$131 Level Downside, Targeting \\$130 Level\"\n",
-       " \"Far from debasement, dollar hits overdrive\"\n",
+       "1056-element Vector{Any}:\n",
+       " \"Dollar slips, euro gains as market awaits US CPI data\"\n",
+       " \"USDCHF lower but pair remains stuck in the mud\"\n",
+       " \"Aussie rises as risk appetite rises\"\n",
+       " \"GBPUSD working on its 3rd day higher but the going is relatively slow\"\n",
+       " \"EURUSD remains relatively contained although higher on the day\"\n",
        " \"Dollar Edges Lower\"\n",
-       " \"Remains Near 16-Month High\"\n",
-       " \"NZ dollar drops below 70 level\"\n",
-       " \"Dollar Near 16-Month High on Rates Hike Bets\"\n",
-       " \"Dollar climbs after hot US inflation\"\n",
-       " \"euro dips\"\n",
-       " \"US Dollar Continues to Gain Following Wednesday's Inflation Data \"\n",
-       " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
-       " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
-       " \"Dollar Climbs to 2021 Highs\"\n",
+       " \"Tight Range Ahead of Inflaton Data\"\n",
+       " \"Kazakh state sells \\$1.3 billion worth of foreign currency in domestic market in Jan\"\n",
+       " \"AUD/USD nudges to two-week high as dollar slips on the day\"\n",
+       " \"Dollar Down as Investors Await US Inflation Data\"\n",
+       " \"ForexLive Asia FX news wrap: EUR/USD slides a few points\"\n",
+       " \"Canadian dollar weakens as oil rally loses momentum\"\n",
+       " \"Dollar, euro trade sideways after ECB pushback\"\n",
        " ⋮\n",
-       " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
-       " \"Dollar Drops\"\n",
-       " \"Euro, Sterling Gain on Summit Agreement\"\n",
-       " \"Negative Rates Lose Out to Zero Cost of Money in Opening Wallets\"\n",
-       " \"EU progress and vaccine hopes keep pressure on dollar\"\n",
-       " \"Dollar Retreats Over Renewed Hopes for COVID-19 Vaccine\"\n",
-       " \"Euro Climbs on EU Recovery Fund Optimism\"\n",
-       " \"Euro jumps to four-month peak on hints of progress in debt talks\"\n",
-       " \"Dollar Up, With Investors Anticipating Fresh US Stimulus Measures\"\n",
-       " \"Iran's rial hits new low on unofficial market\"\n",
-       " \"virus, sanctions weigh\"\n",
-       " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
+       " \"Fed Minutes Loom\"\n",
+       " \"GBP/USD Hits 3-Month High but Return of Brexit Boogeyman Will Cap Gains\"\n",
+       " \"Dollar slides to 2-1/2 month low as Fed rate hike fears subside\"\n",
+       " \"Canadian exporters rejig currency hedges as commodities boom\"\n",
+       " \"Dollar Weakens as Fed Officials Point to Lower for Longer\"\n",
+       " \"Dollar Down as Investors Bet on US Interest Rates Staying Lower for Longer\"\n",
+       " \"Gold Up, Reaches Three-and-a-Half Month High Over Weaker Dollar, Inflation Worries\"\n",
+       " \"Dollar inches lower as Treasury yields hold firm\"\n",
+       " \"Hungary Takes Pole Position for EU’s First Rate Hike of 2021\"\n",
+       " \"Dollar Edges Higher\"\n",
+       " \"Covid Cases Rise in Asia\"\n",
+       " \"Dollar Up Over Asian COVID-19 Outbreak Worries, But Investors Prepping for Fall\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,43 +527,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "762d1bc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1851-element Vector{Any}:\n",
-       " \"Dollar dips but shows biggest weekly gain in almost 3 months\"\n",
-       " \"EURJPY Price Penetrates \\$131 Level Downside, Targeting \\$130 Level\"\n",
-       " \"Far from debasement, dollar hits overdrive\"\n",
+       "939-element Vector{Any}:\n",
+       " \"Dollar slips, euro gains as market awaits US CPI data\"\n",
+       " \"USDCHF lower but pair remains stuck in the mud\"\n",
+       " \"Aussie rises as risk appetite rises\"\n",
+       " \"GBPUSD working on its 3rd day higher but the going is relatively slow\"\n",
+       " \"EURUSD remains relatively contained although higher on the day\"\n",
        " \"Dollar Edges Lower\"\n",
-       " \"Remains Near 16-Month High\"\n",
-       " \"NZ dollar drops below 70 level\"\n",
-       " \"Dollar Near 16-Month High on Rates Hike Bets\"\n",
-       " \"Dollar climbs after hot US inflation\"\n",
-       " \"euro dips\"\n",
-       " \"US Dollar Continues to Gain Following Wednesday's Inflation Data \"\n",
-       " \"De-Banking Crypto Traders Is More Sinister And Anti-Competitive -Aussie Senator Bragg\"\n",
-       " \"Euro US Dollar (EUR/USD) Exchange Rate Hits Low as USD Soars\"\n",
-       " \"Dollar Climbs to 2021 Highs\"\n",
+       " \"Tight Range Ahead of Inflaton Data\"\n",
+       " \"Kazakh state sells \\$1.3 billion worth of foreign currency in domestic market in Jan\"\n",
+       " \"AUD/USD nudges to two-week high as dollar slips on the day\"\n",
+       " \"Dollar Down as Investors Await US Inflation Data\"\n",
+       " \"ForexLive Asia FX news wrap: EUR/USD slides a few points\"\n",
+       " \"Canadian dollar weakens as oil rally loses momentum\"\n",
+       " \"Dollar, euro trade sideways after ECB pushback\"\n",
        " ⋮\n",
-       " \"Euro Is Turning Into ‘Credible’ Safe Haven After EU Rescue Deal\"\n",
-       " \"Dollar Drops\"\n",
-       " \"Euro, Sterling Gain on Summit Agreement\"\n",
-       " \"Negative Rates Lose Out to Zero Cost of Money in Opening Wallets\"\n",
-       " \"EU progress and vaccine hopes keep pressure on dollar\"\n",
-       " \"Dollar Retreats Over Renewed Hopes for COVID-19 Vaccine\"\n",
-       " \"Euro Climbs on EU Recovery Fund Optimism\"\n",
-       " \"Euro jumps to four-month peak on hints of progress in debt talks\"\n",
-       " \"Dollar Up, With Investors Anticipating Fresh US Stimulus Measures\"\n",
-       " \"Iran's rial hits new low on unofficial market\"\n",
-       " \"virus, sanctions weigh\"\n",
-       " \"Dollar Set for Fourth-Weekly Slump as Surging Virus Cases Cast Doubt on Recovery\""
+       " \"Dollar Steadies Near Multi-Month Lows\"\n",
+       " \"Fed Minutes Loom\"\n",
+       " \"GBP/USD Hits 3-Month High but Return of Brexit Boogeyman Will Cap Gains\"\n",
+       " \"Dollar slides to 2-1/2 month low as Fed rate hike fears subside\"\n",
+       " \"Canadian exporters rejig currency hedges as commodities boom\"\n",
+       " \"Dollar Weakens as Fed Officials Point to Lower for Longer\"\n",
+       " \"Dollar Down as Investors Bet on US Interest Rates Staying Lower for Longer\"\n",
+       " \"Gold Up, Reaches Three-and-a-Half Month High Over Weaker Dollar, Inflation Worries\"\n",
+       " \"Dollar inches lower as Treasury yields hold firm\"\n",
+       " \"Hungary Takes Pole Position for EU’s First Rate Hike of 2021\"\n",
+       " \"Covid Cases Rise in Asia\"\n",
+       " \"Dollar Up Over Asian COVID-19 Outbreak Worries, But Investors Prepping for Fall\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,12 +574,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "fdda2040",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = \"articles_modified.txt\"\n",
+    "outfile = \"articles_modified_short.txt\"\n",
     "open(outfile, \"w\") do f\n",
     "  for a in articles_copy\n",
     "    println(f, a)\n",
